--- a/package.json
+++ b/package.json
@@ -1,14 +1,44 @@
 {
-  "name": "feldspar",
+  "name": "sst-astro-svelte-sigma-demo",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "sst bind astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sst:deploy": "sst deploy",
+    "sst:dev": "sst dev"
   },
   "dependencies": {
-    "astro": "^5.1.0"
+    "@astrojs/react": "^4.1.2",
+    "@astrojs/svelte": "^7.0.2",
+    "@astrojs/tailwind": "^5.1.4",
+    "@react-sigma/core": "^4.0.3",
+    "@sigma/node-image": ">=3.0.0-beta.15",
+    "astro": "^5.1.0",
+    "graphology": "^0.25.4",
+    "graphology-layout": "^0.6.1",
+    "graphology-layout-forceatlas2": "^0.10.1",
+    "graphology-types": "^0.24.8",
+    "lodash": "^4.17.21",
+    "react": "^18.3.1",
+    "react-animate-height": "^3.2.3",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "sigma": "^3.0.0",
+    "svelte": "^5.15.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro-sst": "^2.45.2",
+    "aws-cdk-lib": "2.171.1",
+    "constructs": "10.3.0",
+    "sst": "^2"
   }
 }
